--- a/source/_posts/超级饮料的最大强化能量.md
+++ b/source/_posts/超级饮料的最大强化能量.md
@@ -2,4 +2,53 @@
 title: 超级饮料的最大强化能量
 date: 2024-11-02 21:22:57
 tags:
+  - DP
+description: 每天一道算法题，让生活变得更好
+categories:
+  - 学习
+  - 代码
+  - 算法
 ---
+
+### 超级饮料的最大强化能量
+
+来自未来的体育科学家给你两个整数数组 energyDrinkA 和 energyDrinkB，数组长度都等于 n。这两个数组分别代表 A、B 两种不同能量饮料每小时所能提供的强化能量。
+
+你需要每小时饮用一种能量饮料来 最大化 你的总强化能量。然而，如果从一种能量饮料切换到另一种，你需要等待一小时来梳理身体的能量体系（在那个小时里你将不会获得任何强化能量）。
+
+返回在接下来的 n 小时内你能获得的 最大 总强化能量。
+
+注意 你可以选择从饮用任意一种能量饮料开始。
+
+### 解答
+
+```python
+class Solution:
+    def maxEnergyBoost(self, energyDrinkA: List[int], energyDrinkB: List[int]) -> int:
+        n = len(energyDrinkA)
+        ret = [[0, 0] for _ in range(n)]
+        ret[0][0] = energyDrinkA[0]
+        ret[0][1] = energyDrinkB[0]
+        for i in range(1, n):
+            ret[i][0] = max(ret[i - 1][0] + energyDrinkA[i], ret[i-1][1])
+            ret[i][1] = max(ret[i - 1][1] + energyDrinkB[i], ret[i-1][0])
+        return max(ret[-1][0], ret[-1][1])
+```
+
+### 思路
+
+看到题目，第一时间就想到了动态规划。
+
+设计转变方程，0表示当前位置在 A 队列，1表示当前位置在 B 队列。
+
+f(i)(0) = f(i-1)(1) + f(i-1)(0) + energyDrinkA[i]
+
+f(i)(1) = f(i-1)(0) + f(i-1)(1) + energyDrinkB[i]
+
+看到这个方程式，感觉就直接可以了。
+
+### 复杂度
+
+时间复杂度：O(N)，一遍遍历
+
+空间复杂度：O(N)，长度为 n * 2 的数组
