--- a/source/_posts/无题.md
+++ b/source/_posts/无题.md
@@ -17,6 +17,6 @@ date: 2024-11-14 19:34:34
 - 小宝： 身高 80cm，床：长 200cm，宽 180 + 60（拼接小床）cm。
 - 成年人：平均身高 175cm，
 
-从长宽的2维尺度上等比例放大，那么她在床上玩的时候，就相当于我们在 长 **200 * (175^2) / (80^2) = 957**，宽 **240 * (175*2) / (80^2) = 1148** 这个大小的床上玩的感受。
+从长宽的2维尺度上等比例放大，假设肩膀和身高的比例是一致的，那么她在床上玩的时候，就相当于我们在 长 **200 * (175^2) / (80^2) = 957**，宽 **240 * (175*2) / (80^2) = 1148** 这个大小的床上玩的感受。
 
 哇，一算，发现真的是一张巨大无比的床，要是我可以在 9.7米，11.48米的床上玩耍，一定也会感觉特别的快乐开心、安全舒适。(以上是我，某一瞬间的随意想法，博自己一笑)
