--- a/source/_posts/花.md
+++ b/source/_posts/花.md
@@ -9,7 +9,7 @@ date: 2024-12-21 12:55:53
 updated: 2024-12-21 12:55:53
 ---
 
-{% asset_img 沙漠之花.png %}
+{% asset_img 沙漠之花.webp%}
 
 看到沙漠中开出绚烂夺目的花朵，不经感叹生命的顽强。
 
