--- a/source/_posts/花.md
+++ b/source/_posts/花.md
@@ -13,6 +13,4 @@ updated: 2024-12-21 12:55:53
 
 看到沙漠中开出绚烂夺目的花朵，不经感叹生命的顽强。
 
-沙漠之花，她的绽放就是在向沙漠宣战。
-
-我们应该为了让更多的花朵得以盛开，去改变沙漠，而不是只是赞叹沙漠之花的不易，甚至倒果为因的认为沙漠才是孕育沙漠之花的最好环境。
+不论环境多么恶劣，她都顽强地生长，也许她想看到满山鲜花盛开的那一刻。
