--- a/source/_posts/2025展望.md
+++ b/source/_posts/2025展望.md
@@ -15,7 +15,7 @@ updated: 2025-01-01 13:19:23
 
 1、继续坚持做算法题，全年的刷题天数做到了二分之三的出勤；
 
-2、阅读了不少自己喜欢的书籍：推理类：《绝叫》、《消失的十三级台阶》，传记类：《命运：文在寅传》，反乌托邦小说：《1984》，纪实小说：《平凡的世界》三部曲，历史人文：《中国人的德行》。
+2、阅读了7本自己喜欢的书籍
 
 3、坚持学英语的天数也不少，也坚持了大概150天左右；
 
