--- a/source/_posts/2025展望.md
+++ b/source/_posts/2025展望.md
@@ -11,11 +11,11 @@ updated: 2025-01-01 13:19:23
 
 2024很快过去了，这一年发生了很多事。
 
-首先对于自己做些简单的总结：2024年的我感觉还是收获满满，
+首先对于自己做些简单的总结,2024年的我感觉还是收获满满:
 
 1、继续坚持做算法题，全年的刷题天数做到了二分之三的出勤；
 
-2、阅读了7本自己喜欢的书籍
+2、阅读了7本自己喜欢的书籍;
 
 3、坚持学英语的天数也不少，也坚持了大概150天左右；
 
