--- a/source/_posts/2025展望.md
+++ b/source/_posts/2025展望.md
@@ -13,15 +13,15 @@ updated: 2025-01-01 13:19:23
 
 首先对于自己做些简单的总结,2024年的我感觉还是收获满满:
 
-1、继续坚持做算法题，全年的刷题天数做到了二分之三的出勤；
+1、热爱生活，热爱家人；
 
-2、阅读了7本自己喜欢的书籍;
+2、让身体保持健康；
 
-3、坚持学英语的天数也不少，也坚持了大概150天左右；
+3、拓宽自己的知识范畴；
 
-4、工作中，感觉提升了不少沟通能力，解决问题时更加从容；
+4、坚持了自己希望能坚持下来的阅读、算法、英语；
 
-5、更热爱生活，我认为这点对我来说是最重要的，因为更加热爱生活，我才能更加投入到自己的生活中，享受人生。
+5、使自己有更多动手的事情，不要局限在网络和书本上。
 
 这是今年的一个小总结，希望2025年是可以更加进步的。
 
